# AIChatwithVoiceVox

./: .gitignore  .replit  README.md  app.py  chat.js  main.py  pyproject.toml  render.yaml  replit.md  replit.nix  requirements.txt
.claude/commands/: init.md
attached_assets/: Pasted--AudioBuffer-async-function-preparedBuffer-voice-path-console-log-Preparing--1741178878290.txt  Pasted--AudioBuffer-async-function-preparedBuffer-voice-path-console-log-Preparing-bu-1742713274810.txt  Pasted--Chat-js-184--1741178855407.txt  Pasted--DOCTYPE-html-html-head-base-target-top-link-href-https-cdn-jsdelivr-net-npm--1735909032014.txt  Pasted--GAS-eyeUrls-blinkImages-spe-1735826821318.txt  Pasted--body-script-window-onload-async-function-var-select-document-1735830769636.txt  Pasted-yeUrls-blinkImages-speakerId-blinkAtRandomIntervals-let-interval-3-1735624231502.txt  voicevox_speakerID_ver0.15.5_1751981565407.json
static/css/: style.css
static/js/: TtsQuestV3Voicevox.js  chat.js
templates/: index.html
utils/: openai_helper.py
