[project]
name = "repl-nix-voicechatai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-sqlalchemy==3.1.1",
    "flask==3.0.0",
    "psycopg2-binary==2.9.9",
    "openai==1.12.0",
    "werkzeug>=3.1.3",
]
