[project]
name = "repl-nix-voicechatai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "psycopg2-binary>=2.9.10",
    "pytz>=2024.2",
    "jpholiday>=0.1.10",
    "openai==0.28",
]
